--- a/index.html
+++ b/index.html
@@ -3,52 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como Fazer um Site</title>
+    <title>Como Usar HTML e CSS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Como Fazer um Site</h1>
+        <h1>Como Usar HTML e CSS</h1>
     </header>
 
     <main>
-        <section id="introduction">
-            <h2>Introdução</h2>
-            <p>Este guia básico irá te mostrar os passos fundamentais para criar um site simples usando HTML e CSS.</p>
+        <section id="headings">
+            <h2>Uso dos Títulos (h1-h6)</h2>
+            <p>Os elementos de cabeçalho são usados para definir títulos e subtítulos em uma página HTML. Aqui estão os exemplos de cada um:</p>
+            <h1>Título Principal (h1)</h1>
+            <h2>Subtítulo (h2)</h2>
+            <h3>Sub-subtítulo (h3)</h3>
+            <h4>Sub-sub-subtítulo (h4)</h4>
+            <h5>Sub-sub-sub-subtítulo (h5)</h5>
+            <h6>Sub-sub-sub-sub-subtítulo (h6)</h6>
         </section>
 
-        <section id="html-basics">
-            <h2>Fundamentos de HTML</h2>
-            <p>HTML (HyperText Markup Language) é a linguagem padrão para criar páginas da web. É usado para estruturar o conteúdo da sua página.</p>
-            <p>Um documento HTML básico começa com a declaração do tipo de documento e inclui as tags principais: <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code>, e <code>&lt;body&gt;</code>.</p>
+        <section id="paragraphs">
+            <h2>Uso de Parágrafos (p)</h2>
+            <p>O elemento <code>&lt;p&gt;</code> é usado para criar parágrafos de texto. Aqui está um exemplo de parágrafo simples:</p>
+            <p>Este é um exemplo de parágrafo. Parágrafos são usados para agrupar blocos de texto e torná-los mais legíveis.</p>
         </section>
 
-        <section id="css-basics">
-            <h2>Fundamentos de CSS</h2>
-            <p>CSS (Cascading Style Sheets) é usado para estilizar o conteúdo HTML. Com CSS, você pode controlar o layout, cores, fontes e outros aspectos visuais da sua página.</p>
-            <p>Um exemplo de código CSS inclui regras para estilizar elementos HTML, como se segue:</p>
-            <pre><code>body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-}
-h1 {
-    font-size: 30px;
-    color: blue;
-}
-h2 {
-    font-size: 20px;
-    color: red;
-}
-p {
-    font-size: 15px;
-    font-family: "Times New Roman", serif;
-    color: black;
-}</code></pre>
+        <section id="images">
+            <h2>Uso de Imagens (img)</h2>
+            <p>O elemento <code>&lt;img&gt;</code> é usado para incluir imagens em uma página web. Aqui está um exemplo:</p>
+            <img src="https://via.placeholder.com/300" alt="Exemplo de Imagem">
+        </section>
+
+        <section id="css">
+            <h2>CSS: IDs e Classes</h2>
+            <p>Você pode usar <code>id</code> e <code>class</code> para aplicar estilos específicos aos elementos HTML. Aqui está um exemplo:</p>
+            <p id="example-id">Este parágrafo tem um ID específico.</p>
+            <p class="example-class">Este parágrafo tem uma classe específica.</p>
+            <p>Você pode usar IDs para selecionar um único elemento e classes para selecionar vários elementos.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Guia de Criação de Sites</p>
+        <p>&copy; 2024 Guia de HTML e CSS</p>
     </footer>
 </body>
 </html>
