--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Usar HTML e CSS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -44,8 +44,5 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Guia de HTML e CSS</p>
-    </footer>
 </body>
 </html>
