--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h4>Sub-sub-subtítulo (h4)</h4>
             <h5>Sub-sub-sub-subtítulo (h5)</h5>
             <h6>Sub-sub-sub-sub-subtítulo (h6)</h6>
+            <img src="" alt="Exemplo de Imagem">
         </section>
 
         <section id="paragraphs">
