--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <h4>Sub-sub-subtítulo (h4)</h4>
             <h5>Sub-sub-sub-subtítulo (h5)</h5>
             <h6>Sub-sub-sub-sub-subtítulo (h6)</h6>
-            <img src="" alt="Exemplo de Imagem">
+            
+            <p>fotodos codigos:</p>
+            <img src="html.png" alt="html">
         </section>
 
         <section id="paragraphs">
@@ -33,7 +35,7 @@
         <section id="images">
             <h2>Uso de Imagens (img)</h2>
             <p>O elemento <code>&lt;img&gt;</code> é usado para incluir imagens em uma página web. Aqui está um exemplo:</p>
-            <img src="https://via.placeholder.com/300" alt="Exemplo de Imagem">
+            <img src="css.png" alt="Exemplo de Imagem">
         </section>
 
         <section id="css">
