--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
             <h5>Sub-sub-sub-subtítulo (h5)</h5>
             <h6>Sub-sub-sub-sub-subtítulo (h6)</h6>
             
-            <p>fotodos codigos:</p>
-            <img src="html.png" alt="html">
+            <p>exemplos:</p>
+            <img src="titulos.png" alt="html">
         </section>
 
         <section id="paragraphs">
             <h2>Uso de Parágrafos (p)</h2>
             <p>O elemento <code>&lt;p&gt;</code> é usado para criar parágrafos de texto. Aqui está um exemplo de parágrafo simples:</p>
             <p>Este é um exemplo de parágrafo. Parágrafos são usados para agrupar blocos de texto e torná-los mais legíveis.</p>
+      <p>exemplos:</p>
+            <img src="paragrafo.png" alt="paragrafo">
         </section>
 
         <section id="images">
             <h2>Uso de Imagens (img)</h2>
             <p>O elemento <code>&lt;img&gt;</code> é usado para incluir imagens em uma página web. Aqui está um exemplo:</p>
-            <img src="css.png" alt="Exemplo de Imagem">
+           <p>exemplo:</p>
+            <img src="img.png" alt="Exemplo de Imagem">
         </section>
 
         <section id="css">
@@ -44,7 +47,10 @@
             <p id="example-id">Este parágrafo tem um ID específico.</p>
             <p class="example-class">Este parágrafo tem uma classe específica.</p>
             <p>Você pode usar IDs para selecionar um único elemento e classes para selecionar vários elementos.</p>
+  <p>exemplos:</p>
+            <img src="id e class.png" alt="Exemplo de Imagem">
         </section>
+    
     </main>
 
 </body>
